- added link to manpage

--- a/_posts/2014-01-30-sync-acl.md
+++ b/_posts/2014-01-30-sync-acl.md
@@ -4,7 +4,9 @@ layout: default
 ---
 
 Snapper can now sync the users and groups from the ALLOW_USERS and
-ALLOW_GROUPS settings to the ACL of the .snapshots directory.
+ALLOW_GROUPS settings to the ACL of the .snapshots directory, thus ensuring
+the required permissions as described in
+[snapper](/manpages/snapper.html#permissions).
 
 Suppose you have already the config "home_tux" for the home directory of the
 user "tux". All you need is to enable syncing of the ACL and allow the user
@@ -17,8 +19,8 @@ user "tux". All you need is to enable syncing of the ACL and allow the user
 
 Snapper has now added "tux" to the ACL:
 
-<pre><code>getfacl /home/tux/.snapshots
-# file: .snapshots
+<pre><code>getfacl -p /home/tux/.snapshots
+# file: /home/tux/.snapshots
 # owner: root
 # group: root
 user::rwx
@@ -28,4 +30,4 @@ mask::r-x
 other::---
 </code></pre>
 
-This feature is available in snapper version 0.2.0.
+This feature is available in snapper since version 0.2.0.
