- special layout for posts

--- a/_posts/2014-01-30-sync-acl.md
+++ b/_posts/2014-01-30-sync-acl.md
@@ -1,6 +1,7 @@
 ---
-title: Sync users and groups to ACL of .snapshots
-layout: default
+title: Sync Users and Groups to ACL of .snapshots
+author: Arvin Schnell
+layout: post
 ---
 
 Snapper can now sync the users and groups from the ALLOW_USERS and
